# Study

./: .gitignore  CSR_SelfSign_CMD.txt  README.md  test
GetSenderMacAddress/: a.out  getSenderMac.c  readMac  readMac.c
HTTPClient/: HTTPClient  HTTPClient.c
IPC/: msgReceiver.c  msgSender.c  sharedMutexProcess1.c  sharedMutexProcess2.c  shmReader.c  shmWriter.c
IpCamPasswordEncryption/: EncryptionData.txt  aes_256_gcm_enc.c  get_tic_tac.c
JSON/: json_utils.c  json_utils.h
LinuxDevDriver/: README.md
LinuxDevDriver/Security/: MOK.der  MOK.pem  MOK.priv
LinuxDevDriver/kernelModule_procfs/: .Module.symvers.cmd  .modules.order.cmd  .myProcModule.ko.cmd  .myProcModule.mod.cmd  .myProcModule.mod.o.cmd  .myProcModule.o.cmd  modules.order  myProcModule.c  myProcModule.ko  myProcModule.mod.c
LinuxDevDriver/myKernelModule/: .Module.symvers.cmd  .modules.order.cmd  .myModule.ko.cmd  .myModule.mod.cmd  .myModule.mod.o.cmd  .myModule.o.cmd  modules.order  myModule.ko  myModule.mod.c
MQTT/: MQTT_Client.c
Projects/IncludeError/: a.out  main.c  module1.c  module1.h  typedef.h
Projects/Linking_And_Library_Creation/: README.md  main  main.c
Projects/Minimal_Application/: makefile
RTSPClient/: 4x4Streamer  4x4Streamer.c  CMakeLists.txt  README.md  RTSP.txt  RTSPClient  RTSPClient.c  RTSPClient_DESCRIBE_raw  RTSPClient_DESCRIBE_raw.c
RTSPClient/NVR_RTSP_pcap/: RTSP_Over_TCP.pcap  RTSP_Over_UDP.pcap  RTSP_Over_http.pcap
RTSPClient/install/share/: README.md
SSL/CSR/: csr.pem  generate_csr  generate_csr.c  (+1 more)
packBits/: decode_packBits.c  encode_packBits.c
(+86 files in other folders)
